--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,12 @@
 			<artifactId>slf4j-log4j12</artifactId>
 			<version>1.6.1</version>
 		</dependency>
+                
+                <!--Soporte para Spring Security -->
+                <dependency>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-starter-security</artifactId>
+                </dependency>
 		
 	</dependencies>
 
@@ -67,6 +73,30 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+                <!--Plugin para QueryDSL -->        
+                        <plugin>
+                            <groupId>com.mysema.maven</groupId>
+                            <artifactId>apt-maven-plugin</artifactId>
+                            <version>1.1.3</version>
+                            <executions>
+                                <execution>
+                                    <goals>
+                                        <goal>process</goal>
+                                    </goals>
+                                    <configuration>
+                                        <outputDirectory>target/generated-sources/java</outputDirectory>
+                                        <processor>com.querydsl.apt.jpa.JPAAnnotationProcessor</processor>
+                                    </configuration>
+                                </execution>
+                            </executions>
+                            <dependencies>
+                                <dependency>
+                                    <groupId>com.querydsl</groupId>
+                                    <artifactId>querydsl-apt</artifactId>
+                                    <version>${querydsl.version}</version>
+                                </dependency>
+                            </dependencies>
+                        </plugin>
 		</plugins>
 	</build>
 
