--- a/pom.xml
+++ b/pom.xml
@@ -68,36 +68,49 @@
 	</dependencies>
 
 	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
-                <!--Plugin para QueryDSL -->        
-                        <plugin>
-                            <groupId>com.mysema.maven</groupId>
-                            <artifactId>apt-maven-plugin</artifactId>
-                            <version>1.1.3</version>
-                            <executions>
-                                <execution>
-                                    <goals>
-                                        <goal>process</goal>
-                                    </goals>
-                                    <configuration>
-                                        <outputDirectory>target/generated-sources/java</outputDirectory>
-                                        <processor>com.querydsl.apt.jpa.JPAAnnotationProcessor</processor>
-                                    </configuration>
-                                </execution>
-                            </executions>
-                            <dependencies>
-                                <dependency>
-                                    <groupId>com.querydsl</groupId>
-                                    <artifactId>querydsl-apt</artifactId>
-                                    <version>${querydsl.version}</version>
-                                </dependency>
-                            </dependencies>
-                        </plugin>
-		</plugins>
+	<plugins>
+		<plugin>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-maven-plugin</artifactId>
+		</plugin>
+		<!--Plugin para QueryDSL -->
+		<plugin>
+			<groupId>com.mysema.maven</groupId>
+			<artifactId>apt-maven-plugin</artifactId>
+			<version>1.1.3</version>
+			<executions>
+				<execution>
+					<goals>
+						<goal>process</goal>
+					</goals>
+					<configuration>
+						<outputDirectory>target/generated-sources/java</outputDirectory>
+						<processor>com.querydsl.apt.jpa.JPAAnnotationProcessor</processor>
+					</configuration>
+				</execution>
+			</executions>
+			<dependencies>
+				<dependency>
+					<groupId>com.querydsl</groupId>
+					<artifactId>querydsl-apt</artifactId>
+					<version>${querydsl.version}</version>
+				</dependency>
+			</dependencies>
+		</plugin>
+		
+		<!-- Plugin para Spring Loaded -->
+		<plugin>
+		  <groupId>org.springframework.boot</groupId>
+		  <artifactId>spring-boot-maven-plugin</artifactId>
+		  <dependencies>
+		    <dependency>
+		      <groupId>org.springframework</groupId>
+		      <artifactId>springloaded</artifactId>
+		      <version>1.2.0.RELEASE</version>
+		    </dependency>
+		  </dependencies>
+		</plugin>
+	</plugins>
 	</build>
 
 </project>
